@@ -1,4 +1,5 @@
 from jug import TaskGenerator
+from jug.task import return_tuple
 
 @TaskGenerator
 def zero():
@@ -12,7 +13,14 @@ def range10():
 def double(x):
     return 2*x
 
+@return_tuple(2)
+@TaskGenerator
+def plus1(x):
+    return x, 1+x
+
 r = range10()
 z = zero()
 r0 = r[z]
 z2  = double(r0)
+z2_2,z3 = plus1(z2)
+
