@@ -4,6 +4,7 @@ version 1.3.0+git
 	immediately necessary)
 	* Work around corner case in `jug shell` command
 	* Add test-jug subcommand
+	* Add return_tuple decorator
 
 version 1.3.0 Tue Nov 1 2016 by luispedro
 	* Update `shell` subcommand to IPython 5
